--- a/json.html
+++ b/json.html
@@ -13,8 +13,9 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript">
         	jQuery(document).ready(function($) {
+        		console.log('ready');
         		jQuery.getJSON('http://localhost/profiltekst/web/json.php', {id: '1234'}, function(json, textStatus) {
-        			console.log(json);
+        			console.log(textStatus);
 				});
         	});
         </script>
