--- a/json.html
+++ b/json.html
@@ -15,7 +15,7 @@
         	jQuery(document).ready(function($) {
         		console.log('ready');
         		jQuery.getJSON('http://localhost/profiltekst/web/json.php', {id: '1234'}, function(json, textStatus) {
-        			console.log(textStatus);
+        			console.log(json);
 				});
         	});
         </script>
