--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 
     <body>
 
-		<iframe src="iframetest.html"></iframe>
+		<iframe src="iframetest.html#hallojatak"></iframe>
 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript">
