--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello Wourlds</title>
-</head>
-<body>
-No
-</body>
+	<head>
+		<title>Profiltekst</title>
+
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+		<style>
+			* {
+				margin: 0;
+				padding: 0;
+			}
+			body, html {
+				width: 100%;
+				height: 100%;
+			}
+			body {
+				background-image: url('http://static.tumblr.com/mvphkvp/Y3bo712im/arto_bg.png');
+				background-size: cover;
+				background-position: center center;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+			iframe {
+			    display: none;
+			}
+		</style>
+
+	</head>
+
+	<body>
+
+		<img src="http://static.tumblr.com/mvphkvp/UBso712ji/coming.png">
+
+	</body>
 </html>
