--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 		<meta property="og:title" content="Profiltekst.dk" />
 		<meta property="og:description" content="Arkiv af profiltekster fra det lukkede Arto" />
 		<meta property="og:site_name" content="Profiltekst.dk" />
-		<meta property="og:image" content="logo_1024.png" />
+		<meta property="og:image" content="http://profiltekst.dk/logo_1024.png" />
+		<meta property="og:image:width" content="1024" />
+		<meta property="og:image:height" content="1024" />
+
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
