--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
         
-        <meta name="description" content="Arkiv af profiltekster fra det lukkede Arto">
-        <meta name="keywords" content="Arto, Arto.dk, profiltekst, profiltekster">
+        <meta name="description" content="Arkiv af profiltekster fra det lukkede Arto" />
+        <meta name="keywords" content="Arto, Arto.dk, profiltekst, profiltekster" />
 		<meta property="og:url" content="http://profiltekst.dk" />
 		<meta property="og:title" content="Profiltekst.dk" />
+		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Arkiv af profiltekster fra det lukkede Arto" />
 		<meta property="og:site_name" content="Profiltekst.dk" />
-		<meta property="og:image" content="http://profiltekst.dk/logo_1024.png" />
+		<meta property="og:image" content="logo_1024.png" />
 		<meta property="og:image:width" content="1024" />
 		<meta property="og:image:height" content="1024" />
+		<meta property="fb:app_id" content="1646848975625169"/>
+		<meta name="application-name" content="Profiltekst.dk" />
 
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
