--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Arkiv af profiltekster fra det lukkede Arto" />
 		<meta property="og:site_name" content="Profiltekst.dk" />
-		<meta property="og:image" content="logo_1024.png" />
+		<meta property="og:image" content="http://profiltekst.dk/logo_1024.png" />
 		<meta property="og:image:width" content="1024" />
 		<meta property="og:image:height" content="1024" />
 		<meta property="fb:app_id" content="1646848975625169"/>
