--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- 
 
+
 	¨ ˜”°º•. profiltekst.dk .•º°”˜ ¨
 
 			   kiggede ;)
@@ -11,7 +12,7 @@
     <head>
         <title>Profiltekst</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
+        <!-- <meta name="viewport" content="initial-scale=1, width=device-width"> -->
         
         <meta name="description" content="Arkiv af profiltekster fra det lukkede Arto" />
         <meta name="keywords" content="Arto, Arto.dk, profiltekst, profiltekster" />
