Bigger menu/synopsis + minor fixes

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         <article>
                             <p> I 2016 sagde vi farvel til Arto ‑ et online-fællesskab, der for hundredetusindevis af børn og unge i cyberspace var en betroet allieret i årene hvor de, og internettet selv, var i hastig udvikling.</p>
 
-                            <p>Arto var farverig, digital legeplads, hvor generationen af internetbrugere der voksede op hånd i hånd med internettet kunne tage de første skridt mod en fremtid, der lagde mere og mere op til digital eksponering og tilstedeværelse.</p>
+                            <p>Arto var en farverig, digital legeplads, hvor generationen af internetbrugere der voksede op hånd i hånd med internettet kunne tage de første skridt mod en fremtid, der lagde mere og mere op til digital eksponering og tilstedeværelse.</p>
 
                             <p>Arto har siden sin storhedstid, i skyggen af nye og større sociale medier, stået tilbage som et minde om en bestemt tid i livet for de brugere, der løbende har forladt eller bare langsomt glemt Arto.<br>
                             Måske er de i årenes løb vendt tilbage. Logget ind med gamle brugernavne for at mindes en tid ‑ som man læser i gamle dagbøger eller breve eller kigger i fotoalbums og husker.<br>
@@ -87,10 +87,10 @@
                             <p>Man kan ikke forevige et helt internetfællesskab, med alt hvad der hørte sig til.<br>
                             Men som digitale artefakter, historiske øjebliksbilleder, kan brugernes profiltekster stå tilbage og tale for sig selv, om den tid de er skrevet i, om de mennesker de er skrevet om og af, og om det sociale forum der før omgav dem.</p>
 
-                            <p>Profilteksterne er oprigtige, i den forstand, at de er oprigtige i deres formål med at ville give et indtryk af hvem der sad bag tasterne på teenageværelset i Slagelse, i forældrenes stue på Christianshavn, eller i en lejlighed i Holstebro.<br>
+                            <p>Profilteksterne er oprigtige, i den forstand, at de er oprigtige i deres formål med at ville give et indtryk af, hvem der sad bag tasterne på teenageværelset i Slagelse, i forældrenes stue på Christianshavn, eller i en lejlighed i Holstebro.<br>
                             Måske er der smurt tykt på, måske er der flere b-veninder end i virkeligheden, måske er attituden hårdere eller den ironiske distance skarpere, men de skriver alle sammen for at komme ud til andre med en idé om hvem de er, eller gerne vil være.</p>
 
-                            <p>Mange af teksterne er sjove ‑ ufrivilligt eller ej. Mange er hudløst ærlige ‑ nogle åbenlyst uærlige. Mange er følelsesladede ‑ nogle næsten ikke til at bære. Mange er bare en helt ligefrem profil.<br>
+                            <p>Mange af teksterne er sjove ‑ ufrivilligt eller ej. Mange er hudløst ærlige ‑ nogle åbenlyst uærlige. Mange er følelsesladede ‑ nogle næsten ikke til at bære. Mange er bare helt simple profiler.<br>
                             Fælles for dem alle er, at de fortjener at blive bevaret for eftertiden, fordi de ikke kun hver især er en del af enkelt menneskes historie, men en del af en kollektiv historie om en ungdoms opvækst i cyberspace. </p>
 
                             <p>Af frygt for at disse små stykker historie med Artos lukning for evigt ville gå tabt, vil Profiltekst.dk gerne bevare et lille hjørne af internettet og de brugere der dér, i håb om at blive hørt og måske få en lille hilsen i gæstebogen, krængede deres sjæle og tanker ud.</p> 
@@ -131,186 +131,6 @@
                                 Tao Kitamoto
                             </p>
                         </article>
-                    </div>
-                </div>
-
-
-                <div id="tao-laver" class="content-box nano">
-                    <div class="nano-content">
-                        <!-- <img src="taolaver.png"> -->
-                        <img src="css/laverbg.png" class="laver-bg">
-
-                        <div class="inner-content">
-                        <p>                        
-                        <b>Hej Tao, det er Tao.</b>
-                        Hej Tao.</p>
-
-                        <p><b>Vi skal fortælle om os selv.</b>
-                        Okay, det er lidt mærkeligt.</p>
-
-                        <p><b>Det er ikke mærkeligt. Alle de andre har gjort det.</b>
-                        Ja okay, det er også rigtigt.</p>
-
-                        <p><b>Hvad er dit navn?</b>
-                        Tao Kitamoto. Det er måske mere den hér måde at gøre det på der er mærkelig.</p>
-
-                        <p><b>Hvor gammel er du?</b>
-                        Jeg er 25. Det ved du godt.</p>
-
-                        <p><b>Jeg synes det er meget sjovt sådan hér. Hvor bor du?</b>
-                        Jeg bor i København. På Nørrebro.</p>
-
-                        <p><b>Hvad laver du?</b>
-                        Ikke så meget. Dig?</p>
-
-                        <p><b>Nej jeg mener hvad laver du til daglig?</b>
-                        Nåh, øh, jeg læser visuel kommunikation på Kunstakademiets Designskole.</p>
-
-                        <p><b>Uuuh se mig.</b>
-                        Stop.</p>
-
-                        <p><b>Hvad er din status? Din civilstatus.</b>
-                        Single.</p>
-
-                        <p><b>Trist.</b>
-                        Stop nu.</p>
-
-                        <p><b>Det er vigtigt at svare på de her spørgsmål. Alle andre gør det også.</b>
-                        Okay jeg skal nok.</p>
-
-                        <p><b>Det er ikke fair hvis du ikke også fortæller om dig selv, når alle andre-</b>
-                        Jeg gør det! Jeg gør det nu. Kom, næste.</p>
-
-                        <p><b>Du skal tage det seriøst. Du skal ikke tro du er bedre end alle de andre der laver profiltekster.</b>
-                        Okay okay, jeg lover. Spørg mig om mere.</p>
-
-                        <p><b>Hvad laver du i din fritid?</b>
-                        Øhh, jeg tegner, koder, kigger på internettet. Laver fotos. Står på skateboard. Og spiller Tetris.</p>
-
-                        <p><b>Du skal være helt ærlig nu.</b>
-                        Okay jeg spiller mest Tetris.
-                        </p>
-
-                        <p><b>Drikker du?</b>
-                        Mens jeg spiller Tetris? Nej.</p>
-
-                        <p><b>Nej, sådan generelt, betyder spørgsmålet.</b>
-                        Ja så gør jeg vel.</p>
-
-                        <p><b>Ryger?</b>
-                        Ryger hvad?</p>
-
-                        <p><b>Øhm, cigaretter tror jeg?</b>
-                        Jo.</p>
-
-                        <p><b>Mobil?</b>
-                        Hva?</p>
-
-                        <p><b>Har du mobil?</b>
-                        Ja jeg har en mobiltelefon. Det er en iPhone 4s.</p>
-
-                        <p><b>Du behøver ikke blære dig. Cam?</b>
-                        Cam? Om jeg har webcam? Ja, der sidder et i min computer.</p>
-
-                        <p><b>Har du dækket det til?</b>
-                        Nej, det er okay hvis der er nogen der kigger på mig.</p>
-
-                        <p><b>Der er ikke nogen der vil kigge på dig. Har du MSN?</b>
-                        Ikke mere.</p>
-
-                        <p><b>Hvad var din MSN?</b>
-                        Den var demonofducktape@hotmail.com</p>
-
-                        <p><b>Haha.</b>
-                        Lad mig nu være.</p>
-
-                        <p><b>Der er flere spørgsmål.</b>
-                        Okay okay, hvad med at jeg stiller <i>dig</i> spørgsmålene?</p>
-
-                        <p><b>Hmm, nej det--</b>
-                        Det er de samme svar alligevel, altså.</p>
-
-                        <p><b>Men så giver det ikke mening med formateringen. Det er mere Q&A agtigt sådan her.</b>
-                        Hm okay, god pointe, næste spørgsmål.</p>
-
-                        <p><b>Hvad er din livret?</b>
-                        Øhh, jeg tror det er ramen, eller sushi. Eller bare alt med svinekød.</p>
-
-                        <p><b>Vi bryder stereotyper ned.</b>
-                        Jeg bryder dit ansigt ned.</p>
-
-                        <p><b>Hvad for noget musik hører du?</b>
-                        Mest dødsmetal. For tiden også black metal, doom, og grind. Og lidt elektronisk. Og lidt hiphop. Og MØ.</p>
-
-                        <p><b>MØ?</b>
-                        Fucking MØ. Elsker MØ.</p>
-
-                        <p><b>Hun er også sød.</b>
-                        Hun er min du holder dig fra hende.</p>
-
-                        <p><b>Yndlingsfilm?</b>
-                        Hackers, fra 1995, med Angelina Jolie.</p>
-
-                        <p><b>Søskende?</b>
-                        Jeg har en lillesøster.</p>
-
-                        <p><b>Har du dyr?</b>
-                        Ingen dyr.</p>
-
-                        <p><b>Tøjstil?</b>
-                        Jeg går kun i sort.</p>
-
-                        <p><b>Klamt. Piercinger?</b>
-                        Nej.</p>
-
-                        <p><b>Tattoveringer?</b>
-                        Nej. Hvor mange spørgsmål er der?</p>
-
-                        <p><b>Lidt endnu. Elsker?</b>
-                        Elsker? Har jeg en elsker?</p>
-
-                        <p><b>Nej, hvad elsker du?</b>
-                        Øøøh, kaffe? Det er et svært spørgsmål synes jeg. Tetris. Min familie og mine venner. Øh. At samle på ting. At gemme ting. Jeg ved det ikke. Sort/hvid billeder og tegneserier.</p>
-
-                        <p><b>Gode svar.</b>
-                        Tak. Har du noget at tilføje?</p>
-
-                        <p><b>Øhm, jeg kan godt lide splatterfilm. Lad os komme videre.</b>
-                        Okay. Der er ikke nogen der gider læse det hér.
-                        </p>
-
-                        <p><b>Hader?</b>
-                        Pffff, jeg ved det ikke, altså.</p>
-
-                        <p><b>Kom nu.</b>
-                        Øhhhhh, hader.. Jeg hader dét hér. Jeg hader dig.</p>
-
-                        <p><b>Hårde ord.</b>
-                        Jeg hader når man trykker en stempelkande ned, og der sådan kommer tryk og der sprøjter kaffe ud over det hele.</p>
-
-                        <p><b>Fucking ja, lige mine ord.</b>
-                        Ja. Sjovt.</p>
-
-                        <p><b>Okay. Det var det.</b>
-                        Det var det hele?</p>
-
-                        <p><b>Vent. Hjemmeside?</b>
-                        Ja. Den hedder <a href="http://taokitamoto.dk">taokitamoto.dk</a>.</p>
-
-                        <p><b>Vil du plugge din instagram?</b>
-                        Okay, jo. <a href="http://instagram.com/taokitamoto">@taokitamoto</a>.</p>
-
-                        <p><b>Så. Det var det.</b>
-                        Det var meget overfladisk, var det ikke?</p>
-
-                        <p><b>Sådan er det. Er der andet?</b>
-                        Det ved jeg ikke. <a href="#" class="go-to-ask">Spørg</a> hvis der er?</p>
-                        </div>
-
-                        <div class="laver-logo">
-                            <img src="css/logo1.jpg">
-                        </div>
-
                     </div>
                 </div>
 
