--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
         <meta charset="UTF-8">
         <!-- <meta name="viewport" content="initial-scale=1, width=device-width"> -->
         
-        <meta name="description" content="Arkiv af profiltekster fra det lukkede Arto" />
+        <meta name="description" content="Arkiv af profiltekster fra det lukkede Arto.dk" />
         <meta name="keywords" content="Arto, Arto.dk, profiltekst, profiltekster" />
 		<meta property="og:url" content="http://profiltekst.dk" />
 		<meta property="og:title" content="Profiltekst.dk" />
 		<meta property="og:type" content="website" />
-		<meta property="og:description" content="Arkiv af profiltekster fra det lukkede Arto" />
+		<meta property="og:description" content="Arkiv af profiltekster fra det lukkede Arto.dk" />
 		<meta property="og:site_name" content="Profiltekst.dk" />
 		<meta property="og:image" content="http://profiltekst.dk/logo_1024.png" />
 		<meta property="og:image:width" content="1024" />
 		<meta property="og:image:height" content="1024" />
 		<meta property="fb:app_id" content="1646848975625169"/>
 		<meta name="application-name" content="Profiltekst.dk" />
-
 
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
@@ -39,7 +38,6 @@
 
         <link rel="stylesheet" href="css/profiltekst.css">
 		<script src="https://use.fontawesome.com/bd7f5fe608.js"></script>
-
     </head>
 
     <body>
@@ -61,11 +59,17 @@
 		</div>
 
 		<div id="menu">
-			<a href="#/about">Om Profiltekst.dk</a>
+			<p>
+				<img src="css/logo.svg">
+			</p>
+			<p>Et arkiv af profiltekster fra det nu lukkede Arto.dk</p>
+			<p>
+				<a href="#/about">Om Profiltekst.dk</a>
+			</p>
 		</div>
 
 		<div id="fb">
-			<div class="fb-like" data-href="http://profiltekst.dk" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+			<div class="fb-like" data-href="http://profiltekst.dk" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
 		</div>
 
 
