--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
                             <div>går kun i sort. Men ofte farverige tryk på sorte t-shirts.</div>
                         </div>
                         <div class="question q-elsker">
-                            tao elsker - kaffe, tetris, at cruise på et skateboard, dødsmetal, sort/hvid billeder, nachos, MØ, kaffe & cigaretter, at samle og gemme ting.
+                            tao elsker - kaffe, tetris, at cruise på et skateboard, dødsmetal, sort/hvid billeder, nachos, MØ, kaffe & cigaretter, at samle og gemme ting. øh. fløde og postits.
                         </div>
                         <div class="question q-hader">
                             <span>Hader</span> // Når man trykker en stempelkande ned, og den fucker op og sprøjter kaffe ud over det hele.
