--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <meta charset="UTF-8">
         <!-- <meta name="viewport" content="initial-scale=1, width=device-width"> -->
         
-        <meta name="description" content="Arkiv af profiltekster fra det lukkede Arto.dk" />
+        <meta name="description" content="Arkiv over profiltekster fra det lukkede Arto.dk" />
         <meta name="keywords" content="Arto, Arto.dk, profiltekst, profiltekster" />
 		<meta property="og:url" content="http://profiltekst.dk" />
 		<meta property="og:title" content="Profiltekst.dk" />
 		<meta property="og:type" content="website" />
-		<meta property="og:description" content="Arkiv af profiltekster fra det lukkede Arto.dk" />
+		<meta property="og:description" content="Arkiv over profiltekster fra det lukkede Arto.dk" />
 		<meta property="og:site_name" content="Profiltekst.dk" />
 		<meta property="og:image" content="http://profiltekst.dk/logo_1024.png" />
 		<meta property="og:image:width" content="1024" />
@@ -62,7 +62,7 @@
 			<p>
 				<img src="css/logo.svg">
 			</p>
-			<p>Et arkiv af profiltekster fra det nu lukkede Arto.dk</p>
+			<p>Et arkiv over profiltekster fra det nu lukkede Arto.dk</p>
 			<p>
 				<a href="#/about">Om Profiltekst.dk</a>
 			</p>
