--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="fb">
-			<div class="fb-like" data-href="http://profiltekst.dk" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+			<div class="fb-like" data-href="http://profiltekst.dk" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
 		</div>
 
 
