--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                             Måske er der smurt tykt på, måske er der flere b-veninder end i virkeligheden, måske er attituden hårdere eller den ironiske distance skarpere, men de skriver alle sammen for at komme ud til andre med en idé om hvem de er, eller gerne vil være.</p>
 
                             <p>Mange af teksterne er sjove ‑ ufrivilligt eller ej. Mange er hudløst ærlige ‑ nogle åbenlyst uærlige. Mange er følelsesladede ‑ nogle næsten ikke til at bære. Mange er bare helt simple profiler.<br>
-                            Fælles for dem alle er, at de fortjener at blive bevaret for eftertiden, fordi de ikke kun hver især er en del af enkelt menneskes historie, men en del af en kollektiv historie om en ungdoms opvækst i cyberspace. </p>
+                            Fælles for dem alle er, at de fortjener at blive bevaret for eftertiden, fordi de ikke kun hver især er en del af et enkelt menneskes historie, men en del af en kollektiv historie om en ungdoms opvækst i cyberspace. </p>
 
                             <p>Af frygt for at disse små stykker historie med Artos lukning for evigt ville gå tabt, vil Profiltekst.dk gerne bevare et lille hjørne af internettet og de brugere der dér, i håb om at blive hørt og måske få en lille hilsen i gæstebogen, krængede deres sjæle og tanker ud.</p> 
                         </article>
