--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         
         <meta name="description" content="Arkiv over profiltekster fra det lukkede Arto.dk" />
         <meta name="keywords" content="Arto, Arto.dk, profiltekst, profiltekster" />
-		<meta property="og:url" content="http://profiltekst.dk" />
+		<meta property="og:url" content="https://profiltekst.dk" />
 		<meta property="og:title" content="Profiltekst.dk" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="Arkiv over profiltekster fra det lukkede Arto.dk" />
 		<meta property="og:site_name" content="Profiltekst.dk" />
-		<meta property="og:image" content="http://profiltekst.dk/logo_1024.png" />
+		<meta property="og:image" content="https://profiltekst.dk/logo_1024.png" />
 		<meta property="og:image:width" content="1024" />
 		<meta property="og:image:height" content="1024" />
 		<meta property="fb:app_id" content="1646848975625169"/>
@@ -69,11 +69,11 @@
 		</div>
 
 		<div id="fb">
-			<div class="fb-like" data-href="http://profiltekst.dk" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+			<div class="fb-like" data-href="https://profiltekst.dk" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
 		</div>
 
 
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	    <script src="js/profiltekst.js"></script>
 
 	    <div id="fb-root"></div>
