--- a/iframe.html
+++ b/iframe.html
@@ -15,7 +15,7 @@
 
 	</div>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="js/nanoscroller.js"></script>
 
 		<script type="text/javascript">
@@ -39,7 +39,7 @@
 					var hash = window.location.hash.replace('#','');
 					// console.log(hash);
 
-					jQuery.getJSON('http://profiltekst.taokitamoto.dk/php/fromhash.php', {hashid: hash}, function(json, textStatus) {
+					jQuery.getJSON('https://profiltekst.taokitamoto.dk/php/fromhash.php', {hashid: hash}, function(json, textStatus) {
 						if(json==null){
 							parent.$(parent.document).trigger("iframeEvent.notfound", true);
 						} else {
