Fixed about https

--- a/about.html
+++ b/about.html
@@ -246,10 +246,10 @@
                             <span>Hader</span> // Når man trykker en stempelkande ned, og den fucker op og sprøjter kaffe ud over det hele.
                         </div>
                         <div class="question q-website">
-                            ¨ ˜”°º•. <span>Webside</span> + <a href="http://taokitamoto.dk" target="_blank">taokitamoto.dk</a> .•º°”˜ ¨
+                            ¨ ˜”°º•. <span>Webside</span> + <a href="https://taokitamoto.dk" target="_blank">taokitamoto.dk</a> .•º°”˜ ¨
                         </div>
                         <div class="question q-instagram">
-                            instagram <a href="http://instagram.com/taokitamoto" target="_blank">@taokitamoto</a>
+                            instagram <a href="https://instagram.com/taokitamoto" target="_blank">@taokitamoto</a>
                         </div>
                         <div class="question q-andet">
                             -> Andet? <a href="#" class="go-to-ask">Spørg</a> <-
@@ -268,7 +268,7 @@
 
 		</div>
 
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="js/nanoscroller.js"></script>
 
         <script type="text/javascript">
@@ -328,7 +328,7 @@
                 var message = $("form .message").val();
 
                 $.ajax({
-                    url: 'http://profiltekst.taokitamoto.dk/php/contact.php',
+                    url: 'https://profiltekst.taokitamoto.dk/php/contact.php',
                     type: 'POST',
                     dataType: 'text',
                     data: {
